# AMS562-Scientific-Programming

./: .gitignore  README.md
AMS562_Homework2/: Makefile  ams562_hw2  ams562_hw2.cpp  extra_test_input.txt  reference_test_output.txt  test_input.txt
AMS562_Homework3/: Doxyfile  README.md
AMS562_Homework3/html/: doxygen_crawl.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
AMS562_Homework3/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  pages_0.js  pages_6.js  searchdata.js
AMS562_Homework3/include/: Rectangle.h  Square.h
AMS562_Homework3/latex/: md__r_e_a_d_m_e.tex
AMS562_Homework3/test/: test.cpp
AMS562_Homework4/: .gitignore  Doxyfile  Makefile  Matrix.hpp  PageRank.hpp  README.md  Vector.hpp  main.cpp
AMS562_Homework4/examples/: pagerank_example.cpp
AMS562_Homework5/: CMakeLists.txt  README.md
AMS562_Homework5/cmake/: gtest_config.cmake  openmp_config.cmake
AMS562_Homework5/src/: inclusive_scan_openmp.hpp  inclusive_scan_threads.hpp  inner_product_openmp.hpp  inner_product_threads.hpp
AMS562_Homework5/tests/: test_inclusive_scan.cpp  test_inner_product.cpp
hw2/: README.md  ams562_hw2  extra_test_output.txt  prime.cpp  prime.h
hw3/: Makefile  README.md  hw3_tests
hw3/include/: Line.h  Point.h
hw3/src/: Line.cpp  Point.cpp  Rectangle.cpp  Square.cpp
hw3/test/: test.cpp
